crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__create_invite.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
expression: create_response
---
{
  "data": {
    "createInviteLink": {
      "capabilities": [
        "Write"
      ],
      "capability": "write",
      "capabilityBits": [
        "CatalogRead",
        "JournalRead",
        "JournalAppend",
        "ViewDataPlanePrivateNetworking"
      ],
      "catalogPrefix": "aliceCo/",
      "token": "[token]"
    }
  }
}
