crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__create_unauthorized.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
expression: unauthorized_response
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 25,
          "line": 3
        }
      ],
      "message": "PermissionDenied: alice@example.test is not authorized to access prefix or name 'notAlice/' with required capability admin",
      "path": [
        "createInviteLink"
      ]
    }
  ]
}
