crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__delete_invite.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
assertion_line: 614
expression: delete_response
---
{
  "data": {
    "deleteInviteLink": true
  }
}
