crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__delete_unauthorized.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
expression: unauthorized_delete
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 25,
          "line": 3
        }
      ],
      "message": "invite link not found",
      "path": [
        "deleteInviteLink"
      ],
      "extensions": {
        "authorization": {
          "requirements": [
            {
              "allOf": [
                "DeleteInviteLink"
              ]
            }
          ]
        },
        "code": "NOT_FOUND"
      }
    }
  ]
}
