crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__list_unauthorized.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
assertion_line: 882
expression: unauthorized_list
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 25,
          "line": 3
        }
      ],
      "message": "PermissionDenied: bob@example.test is not authorized to access prefix or name 'aliceCo/' with required capability admin",
      "path": [
        "inviteLinks"
      ]
    }
  ]
}
