crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__mask_create_invite_link_admin.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
assertion_line: 1956
expression: response
---
{
  "data": {
    "createInviteLink": {
      "capability": "read",
      "catalogPrefix": "aliceCo/",
      "token": "[token]"
    }
  },
  "errors": null
}
