crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__mask_delete_invite_link_viewer.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
assertion_line: 2085
expression: response
---
{
  "data": null,
  "errors": [
    {
      "message": "PermissionDenied: alice@example.test is not authorized to access prefix or name 'aliceCo/' with required capability admin",
      "path": [
        "deleteInviteLink"
      ]
    }
  ]
}
