crates/control-plane-api/src/server/public/graphql/snapshots/control_plane_api__server__public__graphql__invite_links__test__mask_invite_links_admin.snap
---
source: crates/control-plane-api/src/server/public/graphql/invite_links.rs
assertion_line: 2021
expression: response
---
{
  "data": {
    "inviteLinks": {
      "edges": [
        {
          "node": {
            "capability": "read",
            "catalogPrefix": "aliceCo/",
            "singleUse": true
          }
        }
      ]
    }
  },
  "errors": null
}
